changed overflow bug on landing page

--- a/app/style/less/main.less
+++ b/app/style/less/main.less
@@ -86,10 +86,13 @@
 	min-width: 100%;
 	min-height: 100%;
 	top: -10px;
+	overflow: hidden;
 }
 
 .signup-screen {
 	height: 400px;
+	overflow: hidden;
+	position: relative;
 }
 
 .landing-text {
