--- a/app/user.css
+++ b/app/user.css
@@ -1,7 +1,4 @@
-body
-{
-	overflow: hidden;
-}
+
 .caret
 {
 	cursor: pointer;
